<resources>
    <string name="app_name">java_app</string>
    <string name="slogan">Your Ultimate Resource for Plant \n Care, Growth, and Inspiration.</string>
    <string name="sign_in">Sign In</string>
    <string name="back">back</string>
    <string name="logo">logo</string>
    <string name="hi_there">Hi there!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="already_a_member">Already a member?</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome!</string>
</resources>