<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".screen.register">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_marginTop="15.dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="100.dp"
        android:layout_height="100.dp"
        android:layout_gravity="center"
        android:src="@drawable/pllogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20.dp"
        android:layout_marginStart="30dp"
        android:textSize="35.sp"
        android:textStyle="bold"
        android:textColor="@color/green2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome" />

    <Space
        android:layout_width="0.sp"
        android:layout_height="20.dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:layout_marginTop="30dp"
        android:textSize="18.sp"
        android:textColor="@color/black"
        android:text="@string/full_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:layout_marginBottom="10.dp"
        android:layout_marginEnd="30.dp"
        android:inputType="text"
        android:hint="Ex.John Deo"
        android:padding="12dp"
        android:paddingStart="5.dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Space
        android:layout_width="0.sp"
        android:layout_height="20.dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18.sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:layout_marginBottom="10.dp"
        android:layout_marginEnd="30.dp"
        android:inputType="text"
        android:hint="example@gmail.com"
        android:padding="12dp"
        android:paddingStart="5.dp"
        android:textSize="16sp" />


    <Space
        android:layout_width="0.sp"
        android:layout_height="20.dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:textSize="18.sp"
        android:textColor="@color/black"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.dp"
        android:layout_marginBottom="10.dp"
        android:layout_marginEnd="30.dp"
        android:inputType="textPassword"
        android:hint="Password must be at least 6 characters"
        android:padding="12dp"
        android:paddingStart="5.dp"
        android:textSize="16sp" />
    <ProgressBar
        android:id="@+id/pro"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <androidx.cardview.widget.CardView
        android:id="@+id/upBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="35.dp"
        android:layout_marginTop="30.dp"
        android:layout_marginEnd="35.dp"
        android:backgroundTint="@color/green1"
        app:cardCornerRadius="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30.dp"
        android:layout_gravity="start"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/already_a_member"/>

        <TextView
            android:id="@+id/inTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in"
            android:textColor="@color/green2"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>


</LinearLayout>